logs/go_to_poi/build.make.020.log.stderr
/home/hyun1270/competition_ws/woohyun_ws/src/go_to_poi/src/go_to_poi.cpp: In function ‘void poi_array_sub(const ConstPtr&)’:
/home/hyun1270/competition_ws/woohyun_ws/src/go_to_poi/src/go_to_poi.cpp:34:9: error: ‘calculate_range’ was not declared in this scope
         calculate_range(current_pos, temp_poi, &range);
         ^~~~~~~~~~~~~~~
/home/hyun1270/competition_ws/woohyun_ws/src/go_to_poi/src/go_to_poi.cpp:34:9: note: suggested alternative: ‘copy_file_range’
         calculate_range(current_pos, temp_poi, &range);
         ^~~~~~~~~~~~~~~
         copy_file_range
/home/hyun1270/competition_ws/woohyun_ws/src/go_to_poi/src/go_to_poi.cpp:40:9: error: expected ‘;’ before ‘}’ token
         }
         ^
/home/hyun1270/competition_ws/woohyun_ws/src/go_to_poi/src/go_to_poi.cpp: In function ‘int main(int, char**)’:
/home/hyun1270/competition_ws/woohyun_ws/src/go_to_poi/src/go_to_poi.cpp:57:21: error: ‘argv’ was not declared in this scope
     ros::init(argc, argv, "go_to_poi");
                     ^~~~
/home/hyun1270/competition_ws/woohyun_ws/src/go_to_poi/src/go_to_poi.cpp:57:21: note: suggested alternative: ‘argc’
     ros::init(argc, argv, "go_to_poi");
                     ^~~~
                     argc
make[2]: *** [CMakeFiles/go_to_poi.dir/src/go_to_poi.cpp.o] Error 1
make[1]: *** [CMakeFiles/go_to_poi.dir/all] Error 2
make: *** [all] Error 2
